<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="365sp"
        android:layout_height="172sp"
        android:padding="20sp"
        android:orientation="vertical"
        tools:context=".fragment.ConfirmFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika_bold"
            android:text="@string/pet_have_united"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/signika"
            android:layout_marginTop="10sp"
            android:text="@string/this_will_notify"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/btnyes"
                android:padding="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika_bold"
                android:layout_marginTop="16sp"
                android:text="@string/yes"
                android:textColor="@color/LightCoral"
                android:textSize="14sp"/>
            <TextView
                android:padding="10sp"
                android:id="@+id/btnno"
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/signika_bold"
                android:layout_marginTop="16sp"
                android:text="@string/no"
                android:textColor="@color/LightCoral"
                android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>
</layout>