<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightCoral"
    tools:context=".ui.DetailPetOtherUser">

    <ImageView
        android:id="@+id/arrowBack"
        app:tint="@color/white"
        style="@style/arrowBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/pet_info"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/signikanegative_variablefont_wght"
        app:layout_constraintStart_toEndOf="@id/arrowBack"
        app:layout_constraintTop_toTopOf="@id/arrowBack"
        app:layout_constraintBottom_toBottomOf="@id/arrowBack"/>
    <LinearLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner_atas"
        android:backgroundTint="?android:attr/colorBackground"
        app:layout_constraintTop_toBottomOf="@id/arrowBack"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="350sp"
            android:layout_height="200sp"
            android:layout_gravity="center"
            app:cardCornerRadius="10sp"
            app:cardElevation="20sp"
            android:layout_marginTop="20sp">

            <ImageView
                android:id="@+id/imageBanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/kucing" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnDelete"
            android:gravity="center"
            android:layout_width="340dp"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/LightCoral"
            android:backgroundTint="@color/white"
            android:text="@string/delete_post"
            android:textSize="16dp"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            android:drawableRight="@drawable/baseline_delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLookMap" />

        <Button
            android:id="@+id/btnUpload"
            android:layout_width="340dp"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/Green"
            android:text="@string/pet_have_united"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn" />


        <LinearLayout
            android:layout_width="346dp"
            android:layout_height="289dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_shape_detail"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_pet"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/id_pet"
                android:textSize="12dp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pet"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/Pet"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/namePet"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="12dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/name_meow"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Address"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="300dp"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/dateLostFound"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Type"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textSize="12dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/type_anggora"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Gender"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/genderPet"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/email_egasaputra_gmail_com"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Handphone"
                android:layout_width="300dp"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/handphone_08727363464"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Reward"
                android:layout_width="300dp"
                android:textSize="12dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/reward_money_300_thousand"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="12dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/detail"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
