<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10sp"
            android:background="@color/LightCoral"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/arrowBack"
                style="@style/arrowBack"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/signikanegative_variablefont_wght"
                android:text="@string/pet_info"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textStyle="bold" />
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/cardView"
                android:padding="20sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_corner_atas"
                android:backgroundTint="?android:attr/colorBackground"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/arrowBack">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="350sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    app:cardCornerRadius="10sp"
                    app:cardElevation="20sp">

                    <ImageView
                        android:id="@+id/imageBanner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/kucing" />

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="289dp"
                    android:layout_marginTop="30sp"
                    android:background="@drawable/bg_shape_detail"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/id_pet"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/id_pet"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pet"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/Pet"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/namePet"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/name_meow"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Address"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/address"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Date"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/dateLostFound"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Type"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/type_anggora"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Gender"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/genderPet"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Email"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/email_egasaputra_gmail_com"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Handphone"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/handphone_08727363464"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Reward"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/reward_money_300_thousand"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/detail"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/signikanegative_variablefont_wght"
                        android:text="@string/detail"
                        android:textColor="@color/white"
                        android:textSize="12dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>
