<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_row_pet"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_pet"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars" />

        <RelativeLayout
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_pet"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:id="@+id/rv_name"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petname"
                android:textColor="@color/LightCoral"
                android:textSize="20dp"
                android:textStyle="bold"
              />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/pet_have_united"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:padding="8dp"
                android:background="@drawable/rounded_green_background" />

        </RelativeLayout>


        <TextView
            android:id="@+id/createAtTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/DarkGrey"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/rv_name"
            app:layout_constraintStart_toEndOf="@+id/rv_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            tools:text="1 jam yang lalu" />

        <TextView
            android:id="@+id/tv_descriptionAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@string/descriptionAddress"
            app:layout_constraintTop_toBottomOf="@+id/rv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>